@@ -1,5 +1,5 @@
 /*
- * $Id: mousecmn.h,v 1.16 2007/05/18 06:15:31 sfeam Exp $
+ * $Id: mousecmn.h,v 1.17 2012/10/27 02:23:39 sfeam Exp $
  */
 
 /* GNUPLOT - mousecnm.h */
@@ -67,10 +67,10 @@ enum {
     GE_modifier,        /* shift/ctrl/alt key pressed or released; par1 = is new mask, see Mod_ enums below */
     GE_plotdone,        /* acknowledgement of plot completion (for synchronization) */
     GE_replot,          /* used only by ggi.trm */
-    GE_reset            /* reset to a well-defined state
+    GE_reset,           /* reset to a well-defined state
 			   (e.g.  after an X11 error occured) */
-    , GE_fontprops	/* par1 = hchar par2 = vchar */
-#if defined(PIPE_IPC) || defined(WIN_IPC)
+    GE_fontprops	/* par1 = hchar par2 = vchar */
+#if defined(PIPE_IPC)
     , GE_pending        /* signal gp_exec_event() to send pending events */
 #endif
 };
